--- a/lab2.html
+++ b/lab2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quizzer</title>
+    <title>Quiz about you</title>
      <style type="text/css">
     </style>
     <link rel="stylesheet" href="labb.css">
@@ -93,4 +93,5 @@
         </table>  
     </form>
 </body>
+
 </html>
