--- a/lab2.html
+++ b/lab2.html
@@ -56,6 +56,13 @@
                 <input type="radio" name= "mood">fine<br>
                 <input type="radio" name= "mood">I'm in a bad mood</td>
             </tr>
+             <tr>
+                <td>Have you eaten yet??</td>
+                <td><input type="radio"> Yes<br>
+                <input type="radio">Not yet<br>
+                <input type="radio">I don't want to eat</td>
+            </tr>
+            
             <tr> 
                 <td colspan="2" class="heads">Likes</td>
             </tr>
@@ -66,15 +73,6 @@
                 <input type="checkbox">Studies<br>
                 <input type="checkbox">Reading Books</td>
             </tr>
-            <tr>
-                <td>Favorite Food?</td>
-                <td><input type="radio"> Pizza<br>
-                <input type="radio">Burger<br>
-                <input type="radio">Pasta<br>
-                <input type="radio">Fries<br>
-                other: <input type="text"></td>
-            </tr>
-            
             <tr>
                 <td>Favorite Sports</td>
                 <td><input type="checkbox"> Basketball<br>
@@ -95,3 +93,4 @@
 </body>
 
 </html>
+
